Correctif overflow technos

--- a/src/styles/Slideshow/Slideshow.css
+++ b/src/styles/Slideshow/Slideshow.css
@@ -45,11 +45,12 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  flex-wrap: wrap;
+  /*flex-wrap: wrap;*/
   width: 100%;
   height: 70%;
   row-gap: 40px;
   font-weight: bold;
+  overflow: scroll;
 }
 @media (max-width: 768px) {
   .slideshow__category--active {
